changed notes to value in clear checkpoint Api
